frontend/src/styles/utilities.css
/* Width */
.w-full {
  width: 100%;
}

/* Height */
.h-12 {
  height: 3rem;
}
.h-20 {
  height: 5rem;
}

/* Padding */
.p-2 {
  padding: 0.5rem;
}
.py-5 {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}
.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

/* Margin bottom */
.mb-2 {
  margin-bottom: 0.5rem;
}
.mb-4 {
  margin-bottom: 1rem;
}

/* Margin top */
.mt-1 {
  margin-top: 0.25rem;
}
.mt-4 {
  margin-top: 1rem;
}
.mt-8 {
  margin-top: 2rem;
}

/* Borders */
.border {
  border-style: solid;
  border-width: 1px;
  border-color: var(--eaa-blue-600);
}
.border-none {
  border: none;
}

/* Focus outline */
.focus-outline:focus {
  outline-style: solid;
  outline-offset: 1px;
  outline-width: 2px;
  outline-color: var(--eaa-blue-600);
}

/* Flex */
.flex {
  display: flex;
}
.flex-col {
  flex-direction: column;
}
.flex-grow {
  flex-grow: 1;
}
.gap-2 {
  gap: 0.5rem;
}
.items-start {
  align-items: flex-start;
}
.items-end {
  align-items: flex-end;
}
.self-stretch {
  align-self: stretch;
}

/* Text sizes */
.text-sm {
  font-size: 0.75rem;
}
.text-md {
  font-size: 1rem;
}
.text-lg {
  font-size: 1.25rem;
}

/* Text colors */
.text-white {
  color: white;
}
.text-blue {
  color: var(--eaa-blue-700);
}

/* Border rounding */
.rounded {
  border-radius: 0.125rem;
}

/* Display */
.inline-block {
  display: inline-block;
}
.block {
  display: block;
}

